added the dark mode option

--- a/src/app/custom-layout/custom-layout.component.html
+++ b/src/app/custom-layout/custom-layout.component.html
@@ -23,7 +23,7 @@
       (menuToggle)="handleMenuToggle()"
     ></app-header>
 
-    <main class="app-shell__content">
+    <main class="app-shell__content" [@fadeIn]>
       <router-outlet></router-outlet>
     </main>
   </div>
