--- a/src/app/layout/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/components/dashboard/dashboard.component.html
@@ -80,7 +80,7 @@
               <div class="ml-auto">
                 <button mat-stroked-button color="primary" type="button" (click)="editNotice()" *ngIf="!editing"
                   mat-button class="button-small-outline"
-                  style="--mdc-outlined-button-outline-color:var(--red-primary)">
+                  style="--mdc-outlined-button-outline-color:var(--color-primary)">
                   Edit
                 </button>
                 <button *ngIf="editing" (click)="clearNotice()" color="" mat-button
